# no-code-crypto-agent

./: .gitignore  .vercelignore  DEPLOYMENT.md  PHANTOM_INTEGRATION.md  README.md  WEB_INTERFACE_README.md  app.py  app_phantom.py  deploy-vercel-optimized.sh  deploy-vercel.sh  index.html  index_phantom.html  pyproject.toml  requirements.txt  setup.py  start_phantom_interface.py  start_web_interface.py  vercel.json
api/: index.py
src/dspy_agents/: README.md  __init__.py  agent_basic.py  agent_tools.py  agent_tools_evm.py  agent_tools_solana.py  agent_with_complex_usdg_validation.py
src/dspy_evm_wallet/: __init__.py  abi.py  config.py  primitive_evm_functions.py  token_types.py
src/dspy_solana_wallet/: __init__.py  agent_basic.py  agent_phantom.py  agent_phantom_extended.py  agent_tools.py  agent_with_complex_usdg_validation.py  config.py  primitive_solana_functions.py  token_types.py
tests/: __init__.py  conftest.py  test_dspy_agent_basic_evm_integration.py  test_dspy_agent_basic_integration.py  test_dspy_agent_basic_multichain_integration.py  test_dspy_agent_basic_solana_integration.py  test_dspy_agent_with_complex_usdg_validation.py  test_dspy_base.py  test_dspy_multichain_base.py  test_evm_wallet_flow_end_to_end_test.py  test_faucet_integration.py  test_primitive_solana_functions.py  test_wallet_flow_end_to_end_test.py
